IE6 - fix invisible "Welcome back! Your profile is 85% complete." message
svn@23220

--- a/web/src/main/webapp/skins/curriki8/style2.css
+++ b/web/src/main/webapp/skins/curriki8/style2.css
@@ -2233,6 +2233,7 @@ a.toggler.collapsed {background-position: 0 -1530px;}
 	font-weight:normal;
 	font-size:1.1em;
 	padding-bottom:10px 0;
+	zoom: 1.01;
 }
 
 /** TABS **/
